Update getUserMedia constraints algorithm for video devices.

Add aspect ratio as part of the default criteria to select the device.
Some devices report both 640x480 and 480x640 and, if the latter is listed
first, it will be preferred.
Moreover, some devices report 480x640 and do not actually support it,
which leads to getUserMedia failing on these devices.


Bug: 756831
Change-Id: I56536aafb1227f7dc4aeff599ca1746feab1e0ef